# ai-news-summarizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.txt  start.sh
.kiro/specs/ai-news-summarizer/: .config.kiro  design.md  requirements.md  tasks.md
app/: __init__.py  config.py  main.py
app/components/: ai_summarizer.py  cache.py  news_aggregator.py
app/models/: data_models.py
app/static/: index.html
app/utils/: error_handling.py  logging.py
tests/: __init__.py  test_ai_summarizer.py  test_cache.py  test_config.py  test_data_models.py  test_error_handling.py  test_logging.py  test_main.py  test_news_aggregator.py
